--- a/package.json
+++ b/package.json
@@ -255,7 +255,8 @@
       "cordova-plugin-nativeaudio": {},
       "cordova-plugin-admob-free": {
         "ADMOB_APP_ID": "ca-app-pub-8004122002631398~8860479029"
-      }
+      },
+      "cordova-plugin-media-controls": {}
     },
     "platforms": [
       "browser",
