--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx": "^3.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-cocoapod-support": "^1.6.2",
     "cordova-plugin-file-transfer": "git+https://github.com/sitewaerts/cordova-plugin-file-transfer.git",
     "cordova-plugin-ionic-webview": "^5.0.0",
