--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "author": "Kesh Jacobs",
   "homepage": "https://justtalkapp.com/",
   "private": true,
+  "scripts": {
+    "uglify": "node scripts/uglify.js"
+  },  
   "dependencies": {
     "@admob-plus/ionic": "^1.7.0",
     "@awesome-cordova-plugins/diagnostic": "^5.41.0",
@@ -34,6 +37,7 @@
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-support-google-services": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
+    "feather-icons": "^4.29.0",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^1.2.4",
@@ -89,6 +93,7 @@
     "gulp": "^4.0.2",
     "shelljs": "^0.8.4",
     "typescript": "2.4.2",
+    "uglify-js": "^3.17.4",
     "whitelist": "^1.0.2",
     "xcode": "^3.0.1"
   },
