--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,5 @@
 {
-  "name": "JustTalk",
+  "name": "justtalk",
   "private": true,
   "devDependencies": {
     "ionic": "ionic-team/ionic-bower#1.3.4"
