--- a/package.json
+++ b/package.json
@@ -9,76 +9,67 @@
     "uglify": "node scripts/uglify.js"
   },
   "dependencies": {
-    "@admob-plus/ionic": "^1.7.0",
-    "@awesome-cordova-plugins/diagnostic": "^5.41.0",
-    "@ionic-native/core": "^5.31.1",
-    "@ionic-native/file": "^5.36.0",
-    "@ionic-native/ionic-webview": "^5.36.0",
-    "@ionic-native/media": "^5.36.0",
-    "@ionic-native/splash-screen": "4.3.2",
-    "@ionic-native/status-bar": "5.36.0",
-    "@ionic/cli": "^6.20.4",
-    "@ionic/storage": "3.0.6",
     "bluebird": "^3.7.2",
-    "cordova": "^11.0.0",
+    "cordova": "^10.0.0",
+    "cordova-android-play-services-gradle-release": "^4.0.0",
+    "cordova-browser": "^6.0.0",
+    "cordova-connectivity-monitor": "^1.2.2",
     "cordova-plugin-add-swift-support": "^2.0.2",
     "cordova-plugin-advanced-http": "^3.3.1",
     "cordova-plugin-audiotoggle": "1.0.3",
     "cordova-plugin-camera": "^4.1.0",
     "cordova-plugin-deeplinks": "^1.1.1",
     "cordova-plugin-device": "^2.0.3",
-    "cordova-plugin-file": "^7.0.0",
+    "cordova-plugin-file": "^6.0.2",
+    "cordova-plugin-file-transfer": "^1.7.1",
     "cordova-plugin-filepath": "^1.5.8",
+    "cordova-plugin-firebasex": "latest",
     "cordova-plugin-geolocation": "^4.1.0",
     "cordova-plugin-inappbrowser": "^4.1.0",
+    "cordova-plugin-ionic-webview": "^5.0.0",
+    "cordova-plugin-media-capture": "^3.0.3",
     "cordova-plugin-media-permissions": "0.0.2",
+    "cordova-plugin-navigationbar-color": "0.0.8",
     "cordova-plugin-splashscreen": "^6.0.0",
+    "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-whitelist": "^1.3.4",
     "cordova-plugin-x-socialsharing": "^5.6.8",
     "cordova-support-google-services": "^1.4.1",
     "es6-promise-plugin": "^4.2.2",
     "feather-icons": "^4.29.0",
-    "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.2.0",
-    "gulp-minify-css": "^1.2.4",
-    "gulp-rename": "^2.0.0",
-    "gulp-sass": "^4.1.0",
     "ionic": "^5.4.16",
-    "ionic-angular": "^1.3.5",
+    "ionic-angular": "^3.9.10",
     "ionic-native": "^2.9.0",
-    "ionicons": "^6.0.4",
+    "ionic-plugin-deeplinks": "^1.0.22",
+    "ionicons": "^5.4.0",
     "moment": "^2.29.1",
-    "node-sass": "^4.12.0",
+    "ng-cordova": "^0.1.27-alpha",
     "npm": "^6.14.15",
     "rxjs": "^6.6.3",
     "update-notifier": "^5.1.0",
     "xml-js": "^1.6.11"
   },
   "devDependencies": {
-    "@angular/cli": "16.0.2",
-    "@ionic/app-scripts": "^3.2.4",
-    "@ionic/cli-plugin-gulp": "1.1.1",
-    "@ionic/cli-plugin-ionic1": "2.1.1",
-    "@ionic/cli-plugin-proxy": "^1.5.9",
-    "@ionic/lab": "3.2.13",
-    "@ionic/v1-toolkit": "^3.2.15",
+    "@ionic/v1-toolkit": "^1.0.0",
     "bower": "^1.8.12",
     "cordova-admob-sdk": "^0.24.1",
     "cordova-android": "^10.1.2",
     "cordova-android-firebase-gradle-release": "^4.0.0",
     "cordova-android-play-services-gradle-release": "^4.0.0",
     "cordova-browser": "^6.0.0",
-    "cordova-ios": "^6.3.0",
+    "cordova-ios": "^6.2.0",
+    "cordova-opentok-android-permissions": "^1.0.1",
     "cordova-plugin-admob-free": "^0.27.0",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-android-permissions": "^1.1.5",
-    "cordova-plugin-androidx": "^3.0.0",
+    "cordova-plugin-androidx": "^2.0.0",
     "cordova-plugin-androidx-adapter": "^1.1.3",
+    "cordova-plugin-audioinput": "^1.0.2",
     "cordova-plugin-background-mode": "^0.7.3",
     "cordova-plugin-cocoapod-support": "^1.6.2",
+    "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file-transfer": "git+https://github.com/sitewaerts/cordova-plugin-file-transfer.git",
     "cordova-plugin-ionic-webview": "^5.0.0",
-    "cordova-plugin-keep-awake": "git+https://github.com/snuffy/cordova-plugin-keep-awake.git",
     "cordova-plugin-media": "^6.1.0",
     "cordova-plugin-media-control": "^1.0.5",
     "cordova-plugin-music-controls2": "^3.0.7",
@@ -90,10 +81,8 @@
     "cordova-plugin-x-toast": "^2.7.3",
     "cordova-promise-polyfill": "0.0.2",
     "cordova.plugins.diagnostic": "^7.1.1",
-    "gulp": "^4.0.2",
+    "ionic": "^5.4.16",
     "shelljs": "^0.8.4",
-    "typescript": "2.4.2",
-    "uglify-js": "^3.17.4",
     "whitelist": "^1.0.2",
     "xcode": "^3.0.1"
   },
