--- a/package.json
+++ b/package.json
@@ -47,13 +47,9 @@
   "devDependencies": {
     "@ionic/v1-toolkit": "^1.0.0",
     "bower": "^1.8.12",
-    "cordova-admob-sdk": "^0.24.1",
     "cordova-android": "^10.1.2",
-    "cordova-android-firebase-gradle-release": "^4.0.0",
     "cordova-android-play-services-gradle-release": "^4.0.0",
-    "cordova-ios": "^7.1.0",
     "cordova-opentok-android-permissions": "^1.0.1",
-    "cordova-plugin-admob-free": "^0.27.0",
     "cordova-plugin-advanced-background-mode": "^1.1.1",
     "cordova-plugin-android-permissions": "^1.1.5",
     "cordova-plugin-androidx": "^2.0.0",
@@ -63,18 +59,14 @@
     "cordova-plugin-cocoapod-support": "^1.6.2",
     "cordova-plugin-compat": "^1.2.0",
     "cordova-plugin-file-transfer": "git+https://github.com/sitewaerts/cordova-plugin-file-transfer.git",
-    "cordova-plugin-firebasex": "^16.4.0",
+    "cordova-plugin-firebasex": "^16.5.0",
     "cordova-plugin-ionic-webview": "^5.0.0",
-    "cordova-plugin-media": "^6.1.0",
-    "cordova-plugin-media-control": "^1.0.5",
-    "cordova-plugin-music-controls2": "^3.0.7",
+    "cordova-plugin-music-controls": "^2.2.0",
     "cordova-plugin-nativeaudio": "^3.0.9",
     "cordova-plugin-navigationbar-color": "^0.1.0",
-    "cordova-plugin-proguard": "^2.2.0",
     "cordova-plugin-statusbar": "git+https://github.com/apache/cordova-plugin-statusbar.git",
     "cordova-plugin-webserver": "^1.0.4",
     "cordova-plugin-x-toast": "^2.7.3",
-    "cordova-promise-polyfill": "0.0.2",
     "cordova.plugins.diagnostic": "^7.1.1",
     "ionic": "^5.4.16",
     "shelljs": "^0.8.4",
@@ -102,40 +94,9 @@
         "GPS_REQUIRED": "true"
       },
       "cordova-plugin-androidx-adapter": {},
-      "cordova-android-firebase-gradle-release": {
-        "FIREBASE-CORE": "17.0.0",
-        "FIREBASE-MESSAGING": "20.1.+",
-        "FIREBASE-ADS": "18.0.0",
-        "FIREBASE-ANALYTICS": "17.0.0",
-        "FIREBASE-APPINDEXING": "19.0.0",
-        "FIREBASE-AUTH": "18.0.0",
-        "FIREBASE-FIRESTORE": "20.0.0",
-        "FIREBASE-FUNCTIONS": "18.0.0",
-        "FIREBASE-STORAGE": "18.0.0",
-        "FIREBASE-CRASH": "16.2.1",
-        "CRASHLYTICS": "2.10.1",
-        "FIREBASE-DYNAMIC-LINKS": "18.0.0",
-        "FIREBASE-INVITES": "17.0.0",
-        "FIREBASE-INAPPMESSAGING": "18.0.1",
-        "FIREBASE-INAPPMESSAGING-DISPLAY": "18.0.1",
-        "FIREBASE-ML-VISION": "21.0.0",
-        "FIREBASE-ML-VISION-IMAGE-LABEL-MODEL": "18.0.0",
-        "FIREBASE-ML-VISION-FACE-MODEL": "18.0.0",
-        "FIREBASE-ML-VISION-OBJECT-DETECTION-MODEL": "17.0.0",
-        "FIREBASE-ML-NATURAL-LANGUAGE": "20.0.0",
-        "FIREBASE-ML-NATURAL-LANGUAGE-LANGUAGE-ID-MODEL": "20.0.0",
-        "FIREBASE-ML-NATURAL-LANGUAGE-TRANSLATE-MODEL": "20.0.0",
-        "FIREBASE-ML-NATURAL-LANGUAGE-SMART-REPLY-MODEL": "20.0.0",
-        "FIREBASE-ML-MODEL-INTERPRETER": "20.0.0",
-        "FIREBASE-ML-VISION-AUTOML": "17.0.0",
-        "FIREBASE-PERF": "18.0.0",
-        "FIREBASE-DATABASE": "18.0.0",
-        "FIREBASE-CONFIG": "18.0.0"
-      },
       "cordova-plugin-whitelist": {},
       "cordova-plugin-cocoapod-support": {},
       "cordova-plugin-navigationbar-color": {},
-      "cordova-plugin-proguard": {},
       "cordova-plugin-androidx": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-file-transfer": {},
@@ -151,9 +112,6 @@
         "ANDROID_PATH_PREFIX": "/"
       },
       "cordova-plugin-add-swift-support": {},
-      "cordova-plugin-keep-awake": {
-        "USESWIFTLANGUAGEVERSION": "5"
-      },
       "cordova-plugin-deeplinks": {},
       "cordova-plugin-advanced-background-mode": {},
       "cordova-plugin-x-toast": {},
@@ -162,39 +120,8 @@
         "ANDROIDX_VERSION": "1.0.0",
         "ANDROIDX_APPCOMPAT_VERSION": "1.3.1"
       },
-      "cordova-plugin-media": {
-        "KEEP_AVAUDIOSESSION_ALWAYS_ACTIVE": "NO"
-      },
       "cordova-plugin-audiotoggle": {},
-      "cordova-plugin-music-controls2": {},
       "cordova-plugin-nativeaudio": {},
-      "cordova-plugin-media-controls": {},
-      "cordova-admob-sdk": {
-        "PLAY_SERVICES_VERSION": "18.0.0"
-      },
-      "cordova-plugin-firebasex": {
-        "FIREBASE_ANALYTICS_COLLECTION_ENABLED": "true",
-        "FIREBASE_PERFORMANCE_COLLECTION_ENABLED": "true",
-        "FIREBASE_CRASHLYTICS_COLLECTION_ENABLED": "true",
-        "ANDROID_ICON_ACCENT": "#FF00FFFF",
-        "ANDROID_FIREBASE_PERFORMANCE_MONITORING": "false",
-        "ANDROID_PLAY_SERVICES_TAGMANAGER_VERSION": "17.0.0",
-        "ANDROID_PLAY_SERVICES_AUTH_VERSION": "18.1.0",
-        "ANDROID_FIREBASE_ANALYTICS_VERSION": "17.5.0",
-        "ANDROID_FIREBASE_MESSAGING_VERSION": "20.3.0",
-        "ANDROID_FIREBASE_CONFIG_VERSION": "19.2.0",
-        "ANDROID_FIREBASE_PERF_VERSION": "19.0.9",
-        "ANDROID_FIREBASE_AUTH_VERSION": "19.4.0",
-        "ANDROID_FIREBASE_INAPPMESSAGING_VERSION": "19.1.1",
-        "ANDROID_FIREBASE_FIRESTORE_VERSION": "21.7.0",
-        "ANDROID_FIREBASE_CRASHLYTICS_VERSION": "17.2.2",
-        "ANDROID_FIREBASE_CRASHLYTICS_NDK_VERSION": "17.2.2",
-        "ANDROID_GSON_VERSION": "2.8.6",
-        "ANDROID_FIREBASE_PERF_GRADLE_PLUGIN_VERSION": "1.3.1"
-      },
-      "cordova-plugin-admob-free": {
-        "ADMOB_APP_ID": "ca-app-pub-8004122002631398~8860479029"
-      },
       "cordova-android-play-services-gradle-release": {
         "PLAY-SERVICES-ADS": "19.4.0",
         "PLAY-SERVICES-ADS-IDENTIFIER": "17.0.0",
@@ -248,12 +175,13 @@
         "PLAY-SERVICES-VISION-IMAGE-LABEL": "18.0.0",
         "PLAY-SERVICES-WALLET": "17.0.0",
         "PLAY-SERVICES-WEARABLE": "17.0.0"
-      }
+      },
+      "cordova-plugin-music-controls": {},
+      "cordova-plugin-firebasex": {}
     },
     "platforms": [
       "browser",
-      "android",
-      "ios"
+      "android"
     ]
   }
 }
